First implementation of wakeup event from SDL_PushEvent
ONLY implemented for Windows at the moment.

We introduce a new video device method:

SendWakeupEvent

used to send a wakeup event to the video device event loop. The event
itself has no importance and does not translate into a SDL_event, its
purpose is when an event is sent from another thread using SDL_PushEvent
to "wake up" the SDL_WaitNextEvent function so that it sees the
SDL_event that is now in the SDL event queue.

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -80,6 +80,9 @@ Makefile: $(srcdir)/Makefile.in
 checkkeys$(EXE): $(srcdir)/checkkeys.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
+checkkeysthreads$(EXE): $(srcdir)/checkkeysthreads.c
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
 loopwave$(EXE): $(srcdir)/loopwave.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
